--- a/client/index.html
+++ b/client/index.html
@@ -373,74 +373,79 @@
 			<div class="xs-pd-20-10 pd-ltr-20">
 				<!-- 회원정보 -->
 				<div class="card-box pb-10">
-					<div class="h5 pd-20 mb-0">사용자 정보</div>
-					<!-- 검색창 -->
-					<div class="form-group mb-0" style="width: 80%; margin: 0 auto; display: flex;">
-						<button
-							type="button"
-							class="btn btn-light dropdown-toggle waves-effect"
-							data-toggle="dropdown"
-							aria-expanded="false"
-						><span class="caret">아이디</span>
-						</button>
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="#">이름</a>
-							<a class="dropdown-item" href="#">닉네임</a>
-							<a class="dropdown-item" href="#">이메일</a>
-							<a class="dropdown-item" href="#">휴대폰번호</a>
-						</div>
-						<input
-							type="text"
-							class="form-control search-input"
-							placeholder="Search Here" style="width: 90%;"
-						/>
-						<div class="dropdown">
+					<div style="display: flex; justify-content: space-between;">
+						<div class="h5 pd-20 mb-0">사용자 정보</div>
+						<div class="pd-20">
 							<a
-								class="dropdown-toggle no-arrow"
 								href="#"
-								role="button"
-								data-toggle="dropdown"
+								class="btn-block"
+								data-toggle="modal"
+								data-target="#signUp"
+								type="button"
 							>
+								<button class="btn btn-success">회원추가</button>
 							</a>
-							<div class="dropdown-menu dropdown-menu-right">
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label"
-										>From</label
-									>
-									<div class="col-sm-12 col-md-10">
-										<input
-											class="form-control form-control-sm form-control-line"
-											type="text"
-										/>
+</div>
+							<div
+								class="modal fade bs-example-modal-lg"
+								id="signUp"
+								tabindex="-1"
+								role="dialog"
+								aria-labelledby="myLargeModalLabel"
+								aria-hidden="true"
+							>
+								<div class="modal-dialog modal-lg modal-dialog-centered">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h4 class="modal-title" id="myLargeModalLabel">
+												회원 추가
+											</h4>
+											<button
+												type="button"
+												class="close"
+												data-dismiss="modal"
+												aria-hidden="true"
+											>
+												×
+											</button>
+										</div>
+										<div class="modal-body">
+											<table class="data-table table nowrap reverseTable">
+												<tbody>
+													<tr>
+														<td>이름</td>
+														<td><input id="add_name" type="text" placeholder="이름을 입력하세요"></td>
+													</tr>
+													<tr>
+														<td>아이디</td>
+														<td><input id="add_id" type="text" placeholder="아이디를 입력하세요"></td>
+													</tr>
+													<tr>
+														<td>비밀번호</td>
+														<td><input id="add_pw" type="password" placeholder="비밀번호를 입력하세요"></td>
+													</tr>
+													<tr>
+														<td>이메일</td>
+														<td><input id="add_email" type="text" placeholder="이메일을 입력하세요"></td>
+													</tr>
+													<tr>
+														<td>휴대폰번호</td>
+														<td><input id="add_phone" type="text" placeholder="휴대폰번호를 입력하세요"></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+										<div class="modal-footer">
+											<button type="button" onclick="addUser()" class="btn btn-primary">
+												회원 추가
+											</button>
+										</div>
 									</div>
-								</div>
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label">To</label>
-									<div class="col-sm-12 col-md-10">
-										<input
-											class="form-control form-control-sm form-control-line"
-											type="text"
-										/>
-									</div>
-								</div>
-								<div class="form-group row">
-									<label class="col-sm-12 col-md-2 col-form-label"
-										>Subject</label
-									>
-									<div class="col-sm-12 col-md-10">
-										<input
-											class="form-control form-control-sm form-control-line"
-											type="text"
-										/>
-									</div>
-								</div>
-								<div class="text-right">
-									<button class="btn btn-primary">Search</button>
 								</div>
 							</div>
-						</div>
+						
 					</div>
-					<table class="data-table table nowrap" style="margin-top: 50px;">
+					<table class="data-table table nowrap">
 						<thead>
 							<tr>
 								<th>번호</th>
@@ -449,6 +454,7 @@
 								<th>비밀번호</th>
 								<th>이메일</th>
 								<th>휴대폰번호</th>
+								<th>관리</th>
 							</tr>
 						</thead>
 						<tbody id="user_tbody">
@@ -465,35 +471,6 @@
 			</div>
 		</div>
 		<script>
-			function editField(fieldId) {
-				const field = document.getElementById(fieldId);
-				const currentValue = field.innerText;
-				const input = document.createElement("input");
-				input.type = "text";
-				input.value = currentValue;
-		
-			  // Replace the field with an input element
-				field.innerText = "";
-				field.appendChild(input);
-		
-			  // Change the button text to "저장" (Save)
-				const button = field.parentElement.querySelector("button");
-				button.innerText = "저장";
-		
-			  // Add click event to the "저장" (Save) button
-			button.onclick = function () {
-				const newValue = input.value;
-				// Perform the save/update logic here
-				// For this example, we simply update the field value
-				field.innerText = newValue;
-				// Change the button text back to "수정" (Edit)
-				button.innerText = "수정";
-				// Reset the button click event to editField()
-				button.onclick = function () {
-					editField(fieldId);
-				};
-			};
-			}
 			function updateUserInfo(fieldId, newValue) {
 			var field = document.getElementById(fieldId);
 			var tablePlus = field.closest("tr").querySelector(".table-plus");
@@ -507,34 +484,40 @@
 		}
 		
 		
-		// 	const express = require('express');
-		// const app = express();
-		// const port = 3000;
+		function editField(fieldId) {
+			const field = document.getElementById(fieldId);
+			const currentValue = field.innerText;
+			const input = document.createElement("input");
+			input.type = "text";
+			input.value = currentValue;
+
+		// Replace the field with an input element
+			field.innerText = "";
+			field.appendChild(input);
+
+		// Change the button text to "저장" (Save)
+			const button = field.parentElement.querySelector("button");
+			button.innerText = "저장";
+
+		// Add click event to the "저장" (Save) button
+			button.onclick = function () {
+				const newValue = input.value;
+				// Perform the save/update logic here
+				// For this example, we simply update the field value
+				field.innerText = newValue;
+				// Change the button text back to "수정" (Edit)
+				button.innerText = "수정";
+				// Reset the button click event to editField()
+				button.onclick = function () {
+					editField(fieldId);
+				};
+			};
+		}
 		
-		// // 정적 파일 서비스 설정 (예시로 public 폴더를 정적 파일 디렉토리로 사용)
-		// app.use(express.static('public'));
-		
-		// // API 엔드포인트 설정 예시
-		// app.get('/api/users', (req, res) => {
-		//   // 여기에서 실제로 데이터베이스에서 사용자 정보를 가져와서 응답을 처리하는 로직을 구현합니다.
-		//   const users = [
-		//     { id: 1, name: 'John Doe' },
-		//     { id: 2, name: 'Jane Smith' },
-		//     // ...
-		//   ];
-		//   res.json(users);
-		// });
-		
-		// // 서버 시작
-		// app.listen(port, () => {
-		//   console.log(`서버가 http://localhost:${port} 에서 실행 중입니다.`);
-		// });
-		
-			function showConfirmation() {
+			function showConfirmation(user_idx) {
 				const confirmation = confirm('정말로 사용자를 삭제하시겠습니까?');
-				console.log(document.getElementById('user_idx'));
 				if (confirmation) {
-					deleteData();
+					deleteData(user_idx);
 				}
 			}
 		// const express = require('express');
