--- a/client/강진영.html
+++ b/client/강진영.html
@@ -683,7 +683,7 @@
 													<tbody>
 														<tr>
 															<td>이름</td>
-															<td id="name">탁성대</td>
+															<td><input type="text" readonly value=ㅇㅇ> </td>
 															<td><button onclick="editField('name')">수정</button></td>
 														  </tr>
 														  <tr>
@@ -734,97 +734,147 @@
 												onclick="showConfirmation()"
 											>삭제
 											</button>
-<script>
-    function editField(fieldId) {
-      const field = document.getElementById(fieldId);
-      const currentValue = field.innerText;
-      const input = document.createElement("input");
-      input.type = "text";
-      input.value = currentValue;
-
-      // Replace the field with an input element
-      field.innerText = "";
-      field.appendChild(input);
-
-      // Change the button text to "저장" (Save)
-      const button = field.parentElement.querySelector("button");
-      button.innerText = "저장";
-
-      // Add click event to the "저장" (Save) button
-      button.onclick = function () {
-        const newValue = input.value;
-        // Perform the save/update logic here
-        // For this example, we simply update the field value
-        field.innerText = newValue;
-        // Change the button text back to "수정" (Edit)
-        button.innerText = "수정";
-        // Reset the button click event to editField()
-        button.onclick = function () {
-          editField(fieldId);
-        };
-      };
-    }
-	function updateUserInfo(fieldId, newValue) {
-  var field = document.getElementById(fieldId);
-  var tablePlus = field.closest("tr").querySelector(".table-plus");
-  var currentValue = field.innerText;
-
-  // Update the field value
-  field.innerText = newValue;
-
-  // Update the table-plus value
-  tablePlus.querySelector(".weight-600").innerText = newValue;
-}
-
-
-// 	const express = require('express');
-// const app = express();
-// const port = 3000;
-
-// // 정적 파일 서비스 설정 (예시로 public 폴더를 정적 파일 디렉토리로 사용)
-// app.use(express.static('public'));
-
-// // API 엔드포인트 설정 예시
-// app.get('/api/users', (req, res) => {
-//   // 여기에서 실제로 데이터베이스에서 사용자 정보를 가져와서 응답을 처리하는 로직을 구현합니다.
-//   const users = [
-//     { id: 1, name: 'John Doe' },
-//     { id: 2, name: 'Jane Smith' },
-//     // ...
-//   ];
-//   res.json(users);
-// });
-
-// // 서버 시작
-// app.listen(port, () => {
-//   console.log(`서버가 http://localhost:${port} 에서 실행 중입니다.`);
-// });
-
-	function showConfirmation() {
-		const confirmation = confirm('정말로 사용자를 삭제하시겠습니까?');
-
-		if (confirmation) {
-			deleteData();
-		}
-	}
-	function deleteData() {
-		console.log('사용자 정보 삭제');
-	}
-// const express = require('express');
-// const app = express();
-
-// // DELETE 요청을 처리하는 엔드포인트 정의
-// app.delete('/users/:id', (req, res) => {
-//   const userId = req.params.id;
-
-//   // 여기서 사용자 삭제 작업을 수행하면 됩니다.
-//   // 예를 들어, 데이터베이스에서 해당 사용자를 삭제하는 코드를 작성합니다.
-
-//   res.sendStatus(200); // 성공적인 응답을 보냄
-// });
-
-</script>
-
+												<button
+													type="button"
+													class="btn btn-secondary"
+													data-dismiss="modal"
+												>
+													Close
+												</button>
+												<button type="button" class="btn btn-primary">
+													Save changes
+												</button>
+											</div>
+										</div>
+									</div>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td class="table-plus">
+									<div class="name-avatar d-flex align-items-center">
+										<div class="txt">
+											<div class="weight-600">1</div>
+										</div>
+									</div>
+								</td>
+								<td>탁성대</td>
+								<td>abcd1234</td>
+								<td>********</td>
+								<td>탁창대</td>
+								<td>
+									<span
+										class="badge badge-pill"
+										data-bgcolor="#e7ebf5"
+										data-color="#265ed7"
+										>abcd1234@naver.com</span
+									>
+								</td>
+								<td>
+									<span>01011111111</span>
+								</td>
+								<td>
+									<span>보라매</span>
+								</td>
+								<td>
+									<span>../profile/eadgnus</span>
+								</td>
+								<td>
+									<div class="table-actions">
+										<a
+									href="#"
+									class="btn-block"
+									data-toggle="modal"
+									data-target="#bd-example-modal-lg"
+									type="button"
+								>
+											<i class="icon-copy dw dw-edit2"></i>
+										</a>
+										<div
+									class="modal fade bs-example-modal-lg"
+									id="bd-example-modal-lg"
+									tabindex="-1"
+									role="dialog"
+									aria-labelledby="myLargeModalLabel"
+									aria-hidden="true"
+								>
+									<div class="modal-dialog modal-lg modal-dialog-centered">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h4 class="modal-title" id="myLargeModalLabel">
+													사용자 정보
+												</h4>
+												<button
+													type="button"
+													class="close"
+													data-dismiss="modal"
+													aria-hidden="true"
+												>
+													×
+												</button>
+											</div>	
+											<div class="modal-body">
+												<table class="data-table table nowrap reverseTable">
+													<thead>
+														<tr>
+															<td>번호</td>
+															<td>1</td>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>이름</td>
+															<td id="name">ddd</td>
+															<td><button onclick="editField('name')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>아이디</td>
+															<td id="id">abcd1234</td>
+															<td><button onclick="editField('id')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>비밀번호</td>
+															<td id="password">********</td>
+															<td><button onclick="editField('password')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>닉네임</td>
+															<td id="nickname">탁창대</td>
+															<td><button onclick="editField('nickname')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>이메일</td>
+															<td id="email">abcd1234@naver.com</td>
+															<td><button onclick="editField('email')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>휴대폰번호</td>
+															<td id="phone">0101111111</td>
+															<td><button onclick="editField('phone')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>자주가는 지역</td>
+															<td id="location">강남구</td>
+															<td><button onclick="editField('location')">수정</button></td>
+														  </tr>
+														  <tr>
+															<td>프로필 사진</td>
+															<td id="profile">../profile/eadgnus</td>
+															<td><button onclick="editField('profile')">수정</button></td>
+														  </tr>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button
+												type="button"
+												class="btn btn-secondary"
+												style="background-color: red; position:relative; right:500px;"
+												data-dismiss="modal"
+												onclick="showConfirmation()"
+											>삭제
+											</button>
 												<button
 													type="button"
 													class="btn btn-secondary"
@@ -929,6 +979,96 @@
 				</div>
 			</div>
 		</div>
+		<script>
+			function editField(fieldId) {
+			  const field = document.getElementById(fieldId);
+			  const currentValue = field.innerText;
+			  const input = document.createElement("input");
+			  input.type = "text";
+			  input.value = currentValue;
+		
+			  // Replace the field with an input element
+			  field.innerText = "";
+			  field.appendChild(input);
+		
+			  // Change the button text to "저장" (Save)
+			  const button = field.parentElement.querySelector("button");
+			  button.innerText = "저장";
+		
+			  // Add click event to the "저장" (Save) button
+			  button.onclick = function () {
+				const newValue = input.value;
+				// Perform the save/update logic here
+				// For this example, we simply update the field value
+				field.innerText = newValue;
+				// Change the button text back to "수정" (Edit)
+				button.innerText = "수정";
+				// Reset the button click event to editField()
+				button.onclick = function () {
+				  editField(fieldId);
+				};
+			  };
+			}
+			function updateUserInfo(fieldId, newValue) {
+		  var field = document.getElementById(fieldId);
+		  var tablePlus = field.closest("tr").querySelector(".table-plus");
+		  var currentValue = field.innerText;
+		
+		  // Update the field value
+		  field.innerText = newValue;
+		
+		  // Update the table-plus value
+		  tablePlus.querySelector(".weight-600").innerText = newValue;
+		}
+		
+		
+		// 	const express = require('express');
+		// const app = express();
+		// const port = 3000;
+		
+		// // 정적 파일 서비스 설정 (예시로 public 폴더를 정적 파일 디렉토리로 사용)
+		// app.use(express.static('public'));
+		
+		// // API 엔드포인트 설정 예시
+		// app.get('/api/users', (req, res) => {
+		//   // 여기에서 실제로 데이터베이스에서 사용자 정보를 가져와서 응답을 처리하는 로직을 구현합니다.
+		//   const users = [
+		//     { id: 1, name: 'John Doe' },
+		//     { id: 2, name: 'Jane Smith' },
+		//     // ...
+		//   ];
+		//   res.json(users);
+		// });
+		
+		// // 서버 시작
+		// app.listen(port, () => {
+		//   console.log(`서버가 http://localhost:${port} 에서 실행 중입니다.`);
+		// });
+		
+			function showConfirmation() {
+				const confirmation = confirm('정말로 사용자를 삭제하시겠습니까?');
+		
+				if (confirmation) {
+					deleteData();
+				}
+			}
+			function deleteData() {
+				console.log('사용자 정보 삭제');
+			}
+		// const express = require('express');
+		// const app = express();
+		
+		// // DELETE 요청을 처리하는 엔드포인트 정의
+		// app.delete('/users/:id', (req, res) => {
+		//   const userId = req.params.id;
+		
+		//   // 여기서 사용자 삭제 작업을 수행하면 됩니다.
+		//   // 예를 들어, 데이터베이스에서 해당 사용자를 삭제하는 코드를 작성합니다.
+		
+		//   res.sendStatus(200); // 성공적인 응답을 보냄
+		// });
+		
+		</script>
 		<!-- js -->
 		<script src="vendors/scripts/core.js"></script>
 		<script src="vendors/scripts/script.min.js"></script>
